package rankings.informes;

import java.util.List;

public interface EstrategiaDeExportacion {
  public void exportar(List<List<String>> informe);
}
