@startuml GenerarRankings



abstract CriterioEntidadQueUsanIncidentes implements CriterioEntidad{
    + nombre(): String
    + generarRanking(List<Entidad>): List<Entidad>
    - obtenerIncidenteDeEntidad(Entidad): List<Incidente>
}

class MayorCantidad extends CriterioEntidadQueUsanIncidentes {
    + nombre(): String
    + generarRanking(List<Entidad>): List<Entidad>
    - cantidadDeIncidentesEnLaSemana(Entidad): int
    - incidenteNoOcurrioHace24Hs(Incidente, List<Incidente>): boolean
}




class MayorTiempo extends CriterioEntidadQueUsanIncidentes {
    + nombre(): String
    - promedioTiempoDeCierre(Entidad): float
    + generarRanking(List<Entidad>): List<Entidad>
}


class ImpactoComunidades implements CriterioComunidad {
    + nombre(): String
    + generarRanking(List<Comunidad>): List<Comunidad>
    - calcularImpacto(Comunidad): float
}

interface CriterioEntidad {
    + nombre(): String
    + generarRanking(List<Entidad>): List<Entidad>
}

interface CriterioComunidad {
    + nombre(): String 
    + generarRanking(List<Comunidad>): List<Comunidad>
}

class generadorDeInformes {

    - criteriosEntidades: List<CriteriosEntidad>
    - criterioComunidad: List<CriterioComunidad>

    + generarDatos(List<Entidad>, List<Comunidad>): List<List<String>>
    
}

note left of generadorDeInformes::generarDatos
    formato: 
    [[nombreRanking1, valor1, valor2],
    [nombreRanking2, valor1, valor2],
    [nombreRanking3, valor1, valor2]]

end note



class Exportador {

    - datos: generadorDeInformes
    - estrategiaDeExportacion: estrategiaDeExportacion

    + exportar(List<Entidad>, List<Comunidad>): void

}

interface estrategiaDeExportacion {
    + exportarConEstrategia(List<List<String>>): void
}

class ExportarCSV implements estrategiaDeExportacion {
    + exportar(List<List<String>>): void
}

note left of ExportarCSV::exportar
    formato: 
    nombreRanking1, nombreRanking2, nombreRanking3
    valor11, valor21, valor31
    valor12, valor22, valor32
    valor13, valor23, valor33
end note


Exportador --> estrategiaDeExportacion
Exportador --> generadorDeInformes
generadorDeInformes-->CriterioEntidad
generadorDeInformes-->CriterioComunidad


@enduml
